Change of homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://KiokoEric.github.io/Better_Health",
+  "homepage": "https://KiokoEric.github.io/My_Better_Health",
   "name": "better_health",
   "version": "0.1.0",
   "private": true,
